@@ -43,3 +43,6 @@ run/
 .classpath
 .settings/
 .breakpoints
+
+# reference
+reference/
