@@ -1,0 +1,6 @@
+package me.av306.xenon.util.text;
+
+public class XenonTextRenderer
+{
+	// TODO: Maybe put text drawing logic here someday? im too lazy rn :P
+}
